Changes in version 0.8-5 (16-07-2013)
=====================================

- POSIX conforming Makefile fixes problems under Solaris.

- Fix for problems with knitr 1.3.

- Fixed: The rarly used offset parameter did not work well with the new edges consisting of arcs in TikZ.


Changes in version 0.8-4 (15-07-2013)
=====================================

- R's base function chol for the Choleski Decomposition now defaults to LAPACK in R 3.0
  resulting in meaningless results for not non-negative definite matrices (without 
  any numerical tolerance!). Therefore power calculations for only semi-positive 
  definite correlation matrices could have been off under R 3.0 in previous versions.
  We switched to the singular value decomposition.

- Fixed: List of user defined power functions doesn't need to have names.

- Further work on the experimental entangled graphs feature.

- Since the vignettes were moved from gMCP/inst/doc to gMCP/vignettes
  most likely they will only be build with R >= 2.14.0.

- Moved MASS, PolynomF, multcomp, lattice, mvtnorm, Matrix, CommonJavaJars and methods 
  from DEPENDS to IMPORTS. Therefore loading gMCP will no longer add these packages to
  the search path and if for example you want to use contrMat from package multcomp you 
  have to load/attach the package yourself.

 37 files changed, 437 insertions(+), 136 deletions(-)


Changes in version 0.8-3 (14-06-2013)
=====================================

- If a correlation matrix is selected in the main window, the same 
  correlation matrix is loaded per default in the power analysis dialog.

- To comply with CRAN policies the function graphGUI has now an argument
  envir to specify in which environment the object graph is located and/or 
  it should be saved (default is the global environment).

 41 files changed, 422 insertions(+), 140 deletions(-)


Changes in version 0.8-2 (14-06-2013)
=====================================
