@@ -21,7 +21,7 @@ extractPower <- function(x, f=list()) {
 
 calcPower <- function(weights, alpha, G, mean = rep(0, nrow(sigma)),
                       sigma = diag(length(mean)), cr = NULL,
-                      nSim = 10000, seed = NULL, type = c("quasirandom", "pseudorandom"),
+                      nSim = 10000, type = c("quasirandom", "pseudorandom"),
 					  f=list(), test) {
 	type <- match.arg(type)
 	if (any(is.na(sigma))) stop("While parameter 'cr' can contain NAs, this does not make sense for 'sigma'.")
@@ -29,7 +29,7 @@ calcPower <- function(weights, alpha, G, mean = rep(0, nrow(sigma)),
 	if (is.list(mean)) {
 	  result <- list()
 	  for (m in mean) {
-		  sims <- rqmvnorm(nSim, mean = m, sigma = sigma, seed = seed, type = type)
+		  sims <- rqmvnorm(nSim, mean = m, sigma = sigma, type = type)
 		  pvals <- pnorm(sims, lower.tail = FALSE)
 		  out <- graphTest(pvalues=pvals, weights=weights, alpha=alpha, G=G, cr=cr, test=test)
 		  out <- extractPower(out, f)
@@ -44,7 +44,7 @@ calcPower <- function(weights, alpha, G, mean = rep(0, nrow(sigma)),
     print(mean)
     print(sigma)
     print(nSim)
-	  sims <- rqmvnorm(nSim, mean = mean, sigma = sigma, seed = seed, type = type)
+	  sims <- rqmvnorm(nSim, mean = mean, sigma = sigma, type = type)
 	  pvals <- pnorm(sims, lower.tail = FALSE)
 	  out <- graphTest(pvalues=pvals, weights=weights, alpha=alpha, G=G, cr=cr, test=test)
 	  extractPower(out, f)
@@ -53,7 +53,7 @@ calcPower <- function(weights, alpha, G, mean = rep(0, nrow(sigma)),
 
 calcMultiPower <- function(weights, alpha, G, muL, sigmaL, nL,
 		sigma = diag(length(muL[[1]])), cr = NULL,
-		nSim = 10000, seed = 4711, type = c("quasirandom", "pseudorandom"),
+		nSim = 10000, type = c("quasirandom", "pseudorandom"),
 		f=list(), digits=4, variables=NULL, test) {
 	meanL <- list()
 	for (mu in muL) {
@@ -70,7 +70,7 @@ calcMultiPower <- function(weights, alpha, G, muL, sigmaL, nL,
 	g <- setWeights(g, weights)
 	if (is.null(variables)) {
 		sResult <- paste(sResult, "Graph:",paste(capture.output(print(g)), collapse="\n"), sep="\n")
-		resultL <- calcPower(weights, alpha, G, mean = meanL, sigma, cr, nSim, seed, type, f, test=test)
+		resultL <- calcPower(weights, alpha, G, mean = meanL, sigma, cr, nSim, type, f, test=test)
 		sResult <- paste(sResult, resultL2Text(resultL, digits), sep="\n")
 	} else {
 		# For testing purposes: variables <- list(a=c(1,2), b=(3), x=c(2,3,4), d=c(1,2))
@@ -89,7 +89,7 @@ calcMultiPower <- function(weights, alpha, G, muL, sigmaL, nL,
 			print(alpha)
 			print(meanL)
 			additionalLabel <- paste(",", paste(paste(names(variables),"=",variablesII,sep=""), collapse=", "))
-			resultL <- calcPower(weights=weights, alpha=alpha, G=GII, mean = meanL, sigma, cr, nSim, seed, type, f, test=test)
+			resultL <- calcPower(weights=weights, alpha=alpha, G=GII, mean = meanL, sigma, cr, nSim, type, f, test=test)
 			sResult <- paste(sResult, resultL2Text(resultL, digits, additionalLabel=additionalLabel), sep="\n")
 			# Going through all of the variable settings:
 			i[j] <- i[j] + 1
