@@ -1,6 +1,8 @@
 Changes in version 0.8-5 (16-07-2013)
 =====================================
 
+- Removed dangerous parameter seed from function rqmvnorm and calcPower.
+
 - POSIX conforming Makefile fixes problems under Solaris.
 
 - Fix for problems with knitr 1.3.
